--- a/src/FilePages/Styles.css
+++ b/src/FilePages/Styles.css
@@ -1,4 +1,3 @@
-
 /*
 whole Container
 */
@@ -78,7 +77,18 @@ whole Container
 @keyframes slideinright {
   0% {
     animation-duration: 1s;
-    transform: translate3d(-1000%, 0%, 0px );
+    transform: translate3d(-100%, 0%, 0px );
+    
+}
+100% {
+  animation-duration: 1s;
+  transform: translate3d(0%, 0%, 0px);
+}
+}
+@keyframes slideinleft {
+  0% {
+    animation-duration: 1s;
+    transform: translate3d(100%, 0%, 0px );
     
 }
 100% {
@@ -87,7 +97,17 @@ whole Container
 }
 }
 
-
+@keyframes slidedown {
+  0% {
+    animation-duration: 1s;
+    transform: translate3d(-20%, -100%, 0px );
+    
+}
+100% {
+  animation-duration: 1s;
+  transform: translate3d(0%, 0%, 0px);
+}
+}
 @keyframes slideup {
   0% {
     animation-duration: 1s;
@@ -101,6 +121,8 @@ whole Container
 }
 
 .PageContainer{
+  animation-duration: 1s;
+  animation-name: slideinright;
     overflow-y: scroll; 
     padding: 4vw;
     position: relative;
@@ -120,7 +142,7 @@ whole Container
 }
 .Page{
   animation-duration: 2s;
-    animation-name: slideup;
+    animation-name: slidedown;
     background-color: black;
     color: white ;
     margin-top: 2vh;
@@ -217,20 +239,19 @@ Navigation
     
 }
 
-/* .port-pic-container{
+ .port-pic-container{
     opacity: 100%;
-    display: flex;
-    float: right;
-    width: 20vw;
-    height: 20vw;
-    margin-top: 10vh;
+    
+    margin-left: 10vw;
+    width: 50vw;
+    height: 50vw;
     background-size: contain;
     background-repeat: no-repeat;
-    border-radius: 20vw;
+    border-radius: 80vw;
     border-right: 1px;
     border-style: solid;
     border-right-color: white;
-  } */
+  } 
 
   .flex-container {
     display: flex;
@@ -324,6 +345,7 @@ Footer
     margin-top: 39vw;
     z-index: 10;
   }
+ 
   .contactIntro{
 
   /*img src */
@@ -338,6 +360,20 @@ Footer
     margin-top: 9vw;
     z-index: 10;
   }
+
+ .port-pic-container{
+  background-image: url(https://github.com/KrotzerSoftwareDevelopment/ksd/blob/master/src/Assets/PortfolioPic.png?raw=true);
+  opacity: 100%;
+  margin-left: 6vw;
+  width: 20vw;
+  height: 20vw;
+  background-size: contain;
+  background-repeat: no-repeat;
+  border-radius: 80vw;
+  border-right: 1px;
+  border-style: solid;
+  border-right-color: white;
+} 
   .email{
     
   }
@@ -350,21 +386,48 @@ Animation
   opacity: 0.01;
   transform: scale(1.1);
 }
-
 .dialog-enter-active {
   opacity: 1;
   transform: scale(1);
   transition: all 300ms;
 }
-
 .dialog-exit {
   opacity: 1;
   transform: scale(1);
 }
-
 .dialog-exit-active {
   opacity: 0.01;
   transform: scale(1.1);
   transition: all 300ms;
 }
 */
+
+/* For Grid */
+.card {
+  animation-duration: 2s;
+  animation-name: slideup;
+  margin-top: 5vh;
+  margin-bottom: 5vh;
+  width: 25vw;
+  height: 25vw;
+  background: grey;
+  border-radius: 5px;
+  background-image: url(https://github.com/KrotzerSoftwareDevelopment/ksd/blob/master/src/Assets/lybg.png?raw=true);
+  background-size: cover;
+  background-position: center center;
+  box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.3);
+  transition: box-shadow 0.5s;
+  will-change: transform;
+  border: 15px solid white;
+}
+
+.card:hover {
+  box-shadow: 0px 30px 100px -10px rgba(0, 0, 0, 0.4);
+}
+.PageBodyAbout {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background: #f0f0f0;
+}
